--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -296,14 +296,14 @@ a.left-topbar-item:hover {
 
 /*---------------------------------------------*/
 .logo {
-    width: 25%;
+    width: 100%;
     height: 100%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
     display: -ms-flexbox;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
 
